# diminumero

./: .coveragerc  .dockerignore  .env.example  .gitignore  ADDING_LANGUAGES.md  ADD_CONJUGATING_PRACTICE.md  ADD_LANGUAGE.md  ADD_LEARNING_MATERIALS.md  ADD_LISTENING_EXERCISES.md  ADD_NEW_LEARNING_MATERIALS.md  ADD_NUMBERS.md  ADD_UI_LANGUAGE.md  CLAUDE.md  DOCKER.md  Dockerfile  README.md  app.py  config.py  conjugation_config.py  docker-compose.dev.yml  docker-compose.prod.yml  generate_numbers.py  main.py  models.py  numbers_data.py  pyproject.toml  quiz_logic.py  translations.py
languages/: __init__.py  config.py  conjugation_loader.py
static/: site.webmanifest
templates/: _conjugate_lang_modal.html  _learn_conjugations_jsonld.html  _learn_jsonld.html  _poll_modal.html  _progress_ring.html  about.html  base.html  cards.html  cards_import.html  cards_practice.html  cards_results.html  conjugate.html  conjugate_practice.html  conjugate_results.html  imprint.html  index.html  language_selection.html  learn_conjugations_de_de.html  learn_conjugations_de_en.html  learn_conjugations_es_de.html  learn_conjugations_es_en.html  learn_conjugations_es_es.html  learn_conjugations_it_en.html  learn_conjugations_it_it.html  learn_cy_en.html  learn_da_ar.html  learn_da_de.html  learn_da_en.html  learn_da_es.html  learn_da_fr.html  learn_da_it.html  learn_da_pt.html  learn_da_uk.html  learn_de.html  learn_de_ar.html  learn_de_de.html  learn_de_en.html  learn_de_es.html  learn_de_fr.html  learn_de_it.html  (+91 more)
tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_cards.py  (+6 more)
(+87 files in other folders)
