[project]
name = "diminumero"
version = "0.1.0"
description = "Interactive web app to practice Spanish number translations - say my number!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
]